--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="style.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/main1.js"></script>
 	<title>Title</title>
 </head>
 <body>
@@ -15,14 +15,20 @@
 	    <div class="layout">
 	        <h1>Change</h1>
 	        <label>
-	            <input type="checkbox" class="ch1" value="54956">  54956
+	            <input type="checkbox" class="ch1" value="2500">  2500
 	        </label>
 	        <label>
-	            <input type="checkbox" class="ch1" value="12356">  12356
+	            <input type="checkbox" class="ch1" value="3500">  3500
 	        </label>
 	        <label>
-	            <input type="checkbox" class="ch1" value="92654">  92654
+	            <input type="checkbox" class="ch1" value="700">  700
 	        </label>
+		    <label>
+			    <input type="checkbox" class="ch1" value="1500">  1500
+		    </label>
+		    <label>
+			    <input type="checkbox" class="ch1" value="2000">  2000
+		    </label>
 	
 	        <label>
 	            <input type="number" class="ch2" value="0">
