--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		    </label>
 	
 	        <label>
-	            <input type="number" class="ch2" value="0">
+		        <input type="checkbox" class="ch2" value="2000">  2000
 	        </label>
 	
 	
