--- a/new/index.html
+++ b/new/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible"
           content="ie=edge">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="main.js"></script>
+    <script src="main1.js"></script>
     <title>Document</title>
 </head>
 <body>
