--- a/new/index.html
+++ b/new/index.html
@@ -37,10 +37,11 @@
     <div class="wrap" style="text-align: center;">
         <div class="test-1"></div>
     
-        <input type="text" class="inp">
+        <input type="text" class="inp-1">
     
         <button class="btn-1">Click</button>
         <button class="stop-1">stop</button>
     </div>
+
 </body>
 </html>
