--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </div>
 
     <div class="wrap" style="text-align: center;">
-        <div class="test"></div>
+        <div class="test-e"></div>
         
-        <input type="text" class="inp">
+        <input type="text" class="inp-e">
         
         <button class="btn">Click</button>
         <button class="stop">stop</button>
