--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible"
           content="ie=edge">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/changeNumbers.js"></script>
     <title>Document</title>
     <style>
         .test, .test-1 {
@@ -43,5 +43,74 @@
         <button class="stop-1">stop</button>
     </div>
 
+    <script>
+        $(function () {
+
+            $('.wrap').find('.test').changeNumbers({
+                start: 0,
+                end: 100
+            });
+
+            $('.wrap').find('.test-1').changeNumbers({
+                start: 1330,
+                format: true
+            });
+
+            $('.test-e').changeNumbers({
+                start: 100
+            });
+
+
+            $('.wrap').find('.btn').each(function (i, btn) {
+                $(btn).on('click', function (e) {
+                    e.preventDefault();
+
+                    var start = $(btn).parent().find('.test').prop('changeNumbersValue') || 0;
+                    var end = $(btn).parent().find('.inp').val();
+
+                    //$(btn).parent().find('.test').prop('changeNumbersValue', start.toString());
+
+                    $(btn).parent().find('.test').changeNumbers('update', {
+                        start: start,
+                        end: end
+                    });
+                });
+            });
+
+            $('.inp-e').on('keyup', function () {
+                var start = $('.test-e').prop('changeNumbersValue') || 0;
+                var end = $(this).val();
+                $('.test-e').changeNumbers('update', {
+                    start: start,
+                    end: end,
+                    format: true
+                })
+            });
+
+            $('.wrap').find('.stop').each(function (i, btn) {
+                $(btn).on('click', function (e) {
+                    e.preventDefault();
+                    $(btn).parent().find('.test').changeNumbers('stop');
+                })
+            });
+
+            $('.wrap').find('.btn-1').on('click', function () {
+
+                var start = $('.test-1').prop('changeNumbersValue') || 0;
+                var end = $('.inp-1').val();
+
+                $('.test-1').changeNumbers('update', {
+                    start: start,
+                    end: end,
+                    format: true
+                })
+            });
+
+            $('.stop-1').on('click', function (e) {
+                e.preventDefault();
+                $('.test-1').changeNumbers('stop');
+            });
+        });
+    </script>
 </body>
 </html>
