--- a/index.html
+++ b/index.html
@@ -6,16 +6,29 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible"
           content="ie=edge">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/slowNumbers.js"></script>
     <title>Document</title>
     <style>
+        .wrapper {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
         .test, .test-1 {
             width: 200px; height: 100px; margin: 10px auto; border: 1px solid red;
         }
     </style>
 </head>
 <body>
+
+    <div class="wrapper">
+        <div class="container-fluid">
+    
+        </div>
+    </div>
+
     <div class="wrap" style="text-align: center;">
         <div class="test"></div>
     
