--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             max-width: 1200px;
             margin: 50px auto 0;
         }
-        .test, .test-1 {
-            width: 200px; height: 100px; margin: 10px auto; border: 1px solid red;
+        .result {
+            font-size: 20px;
+            text-align: right;
         }
     </style>
 </head>
@@ -62,7 +63,7 @@
                                     </select>
                                 </div>
                                 <label class="col-xs-3 control-label">Result:</label>
-                                <label class="col-xs-4 control-label text-info js-result-2">0</label>
+                                <label class="col-xs-4 text-info result js-result-2">0</label>
                             </div>
                         </div>
                     </div>
@@ -96,7 +97,7 @@
                                     </select>
                                 </div>
                                 <label class="col-xs-3 control-label">Result:</label>
-                                <label class="col-xs-4 control-label text-info js-result-1">0</label>
+                                <label class="col-xs-4 text-info result js-result-1">0</label>
                             </div>
                         </div>
                     </div>
@@ -135,7 +136,7 @@
                                     </select>
                                 </div>
                                 <label class="col-xs-3 control-label">Result:</label>
-                                <label class="col-xs-4 control-label text-info js-result-3">0</label>
+                                <label class="col-xs-4 text-info result js-result-3">0</label>
                             </div>
                         </div>
                     </div>
