--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/slowNumbers.js"></script>
     <title>Document</title>
     <style>
         .wrapper {
@@ -146,8 +145,10 @@
         </div>
     </div>
 
+    <script src="./src/index.ts"></script>
+
     <script>
-        $(function () {
+        /*$(function () {
 
             // Example 1
             $('.js-result-1').slowNumbers({
@@ -214,7 +215,7 @@
 
                 $('.js-result-3').slowNumbers('stop');
             });
-        });
+        });*/
     </script>
 </body>
 </html>
